# probes-reward-hacking

./: .gitignore  README.md  pyproject.toml
kaggle/datasets/probes-rh-exp3a-ckpt/: dataset-metadata.json
kaggle/datasets/probes-rh-exp3c-artifacts/: dataset-metadata.json
kaggle/datasets/probes-rh-src/: dataset-metadata.json
kaggle/datasets/probes-rh-src/probes-reward-hacking/: .gitignore  main.py  pyproject.toml
kaggle/datasets/probes-rh-src/probes-reward-hacking/configs/: exp3a.yaml
kaggle/datasets/probes-rh-src/probes-reward-hacking/scripts/: kaggle_setup.py  prepare_data.py  run_probes.py
kaggle/datasets/probes-rh-src/probes-reward-hacking/src/probes_rh/: __init__.py  paths.py
kaggle/datasets/probes-rh-src/probes-reward-hacking/src/probes_rh/data/: prep_prompts.py
kaggle/kernels/exp3b/: kernel-metadata.json  run_exp3b.py
kaggle/kernels/exp3c/: kernel-metadata.json  run_exp3c.py
kaggle/kernels/exp3d/: kernel-metadata.json  run_exp3d.py
kaggle/kernels/exp3e/: kernel-metadata.json  run_exp3e.py
scripts/: _bootstrap.py  kaggle_cli_run_exp3b.sh  kaggle_cli_run_exp3c.sh  kaggle_cli_run_exp3d.sh  kaggle_cli_run_exp3e.sh  kaggle_pack.py  kaggle_restore.py  prepare_data.py  run_mid_training_curve.py  run_probe_transfer.py  run_probe_transfer_heldout.py  run_probes.py  score_rollouts.py  train_grpo.py
src/probes_rh/: chat.py
src/probes_rh/data/: __init__.py
src/probes_rh/eval/: activations.py  probes.py
src/probes_rh/rewards/: proxy.py
src/probes_rh/train/: __init__.py  grpo_proxy.py
(+5 files in other folders)
